--- a/source/css/style.css
+++ b/source/css/style.css
@@ -247,33 +247,33 @@ body {
 
 /* HERO BLOCK */
 .hero {
-  background: url(../images/hero/gamer.svg) top 8% right 35%/20% no-repeat;
+  background: url("../images/hero/gamer.svg") top 8% right 35%/20% no-repeat;
   position: relative;
   padding-bottom: 80px;
 }
 @media (max-width: 2560px) {
   .hero {
-    background: url(../images/hero/gamer.svg) top 8% right 30%/25% no-repeat;
+    background: url("../images/hero/gamer.svg") top 8% right 30%/25% no-repeat;
   }
 }
 @media (max-width: 2000px) {
   .hero {
-    background: url(../images/hero/gamer.svg) top 8% right 17%/30% no-repeat;
+    background: url("../images/hero/gamer.svg") top 8% right 17%/30% no-repeat;
   }
 }
 @media (max-width: 1750px) {
   .hero {
-    background: url(../images/hero/gamer.svg) top 8% right 10%/39% no-repeat;
+    background: url("../images/hero/gamer.svg") top 8% right 10%/39% no-repeat;
   }
 }
 @media (max-width: 1440px) {
   .hero {
-    background: url(../images/hero/gamer.svg) top 8% right 5%/45% no-repeat;
+    background: url("../images/hero/gamer.svg") top 8% right 5%/45% no-repeat;
   }
 }
 @media (max-width: 1024px) {
   .hero {
-    background: url(../images/hero/gamer.svg) top 8% right -10%/55% no-repeat;
+    background: url("../images/hero/gamer.svg") top 8% right -10%/55% no-repeat;
     margin-bottom: 30px;
     padding-bottom: 20px;
   }
@@ -286,7 +286,7 @@ body {
 }
 @media (max-width: 390px) {
   .hero {
-    background: url(../images/hero/gamer.svg) top 8% right -10%/45% no-repeat;
+    background: url("../images/hero/gamer.svg") top 8% right -10%/45% no-repeat;
   }
 }
 @media (max-width: 1440px) {
@@ -400,7 +400,7 @@ body {
   color: #171147;
   font-weight: 700;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  background: url(../images/hero/enjoy.png) bottom 10% left 30% no-repeat;
+  background: url("../images/hero/enjoy.png") bottom 10% left 30% no-repeat;
   line-height: 68px;
   padding-bottom: 20px;
   position: relative;
@@ -416,7 +416,7 @@ body {
 @media (max-width: 1200px) {
   .hero__title {
     font-size: 40px;
-    background: url(../images/hero/enjoy.png) bottom 10% left 30%/15% no-repeat;
+    background: url("../images/hero/enjoy.png") bottom 10% left 30%/15% no-repeat;
   }
 }
 @media (max-width: 980px) {
@@ -1216,4 +1216,3 @@ body {
   color: #380822;
   font-weight: 700;
 }
-/*# sourceMappingURL=style.css.map */
