--- a/source/css/style.css
+++ b/source/css/style.css
@@ -286,7 +286,7 @@ body {
 }
 @media (max-width: 390px) {
   .hero {
-    background: url("../images/hero/gamer.svg") top 8% right -10%/45% no-repeat;
+    background: url("../../images/hero/gamer.svg") top 8% right -10%/45% no-repeat;
   }
 }
 @media (max-width: 1440px) {
@@ -400,7 +400,7 @@ body {
   color: #171147;
   font-weight: 700;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  background: url("../images/hero/enjoy.png") bottom 10% left 30% no-repeat;
+  background: url("../../images/hero/enjoy.png") bottom 10% left 30% no-repeat;
   line-height: 68px;
   padding-bottom: 20px;
   position: relative;
@@ -416,7 +416,7 @@ body {
 @media (max-width: 1200px) {
   .hero__title {
     font-size: 40px;
-    background: url("../images/hero/enjoy.png") bottom 10% left 30%/15% no-repeat;
+    background: url("../../images/hero/enjoy.png") bottom 10% left 30%/15% no-repeat;
   }
 }
 @media (max-width: 980px) {
@@ -1049,7 +1049,7 @@ body {
 /* FOOTER */
 .footer {
   width: 100%;
-  background: url("../images/footer/footer_back.png") center no-repeat;
+  background: url("../../images/footer/footer_back.png") center no-repeat;
   color: #ffffff;
 }
 
