--- a/source/css/style.css
+++ b/source/css/style.css
@@ -78,6 +78,9 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-text-fill-color: transparent;
 }
 
+.icon_active {
+  z-index: 2;
+
 /* MAIN */
 body {
   font-family: "Josefin Sans", sans-serif;
