--- a/source/css/style.css
+++ b/source/css/style.css
@@ -76,6 +76,7 @@ h1, h2, h3, h4, h5, h6 {
   background: linear-gradient(45deg, #F73B6C 33%, #2E2594 66%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  -webkit-appearance: none; 
 }
 
 /* MAIN */
