--- a/source/css/style.css
+++ b/source/css/style.css
@@ -71,21 +71,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* FONTS */
-.block__title span, .hero__title span, .header__logo span {
+.block__title span, .hero__title span, .icon_active, .header__logo span {
   color: #F73B6C;
   background: linear-gradient(45deg, #F73B6C 33%, #2E2594 66%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-appearance: none; 
 }
-
-.icon_active {
-  color: #F73B6C;
-  background: linear-gradient(45deg, #F73B6C 33%, #2E2594 66%);
-  -webkit-background-clip: text;
-  -webkit-appearance: none; 
-}
-
 
 /* MAIN */
 body {
