--- a/source/css/style.css
+++ b/source/css/style.css
@@ -166,7 +166,8 @@ body {
   cursor: pointer;
   -webkit-transition: 0.3s all;
   transition: 0.3s all;
-  border: 1px solid rgba(0,0,0,0.3);
+  padding: 12px 34px;
+  border: 1px solid rgba(0,0,0,0.1);
 }
 .header__link:hover {
   color: #ffffff;
