--- a/source/css/style.css
+++ b/source/css/style.css
@@ -126,8 +126,13 @@ body {
   display: -ms-flexbox;
   display: flex;
 }
-.header__list li {
-  margin-left: 50px;
+.header__list li + li {
+  margin-left: 30px;
+}
+@media (max-width: 1300px) {
+  .header__list li + li {
+    margin-left: 20px;
+  }
 }
 @media (max-width: 1024px) {
   .header__list {
@@ -166,14 +171,20 @@ body {
   cursor: pointer;
   -webkit-transition: 0.3s all;
   transition: 0.3s all;
+  padding: 12px 34px;
+  background-color: transparent;
+  border-radius: 25px;
+  border: 1px solid transparent;
 }
-
+@media (max-width: 1200px) {
+  .header__link {
+    padding: 10px 24px;
+  }
+}
 .header__link:hover {
   color: #ffffff;
   border: 1px solid #b53071;
   background-color: #b53071;
-  border-radius: 25px;
-  padding: 12px 34px;
   -webkit-box-shadow: 1px 2px 3px #65123c;
           box-shadow: 1px 2px 3px #65123c;
 }
