--- a/source/css/style.css
+++ b/source/css/style.css
@@ -654,18 +654,11 @@ body {
             justify-content: center;
   }
   .about__content .about__image img {
-    width: 20%;
+    width: 40%;
   }
 }
 
 .about__article {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   padding: 10px 30px;
   margin-left: 30px;
 }
@@ -687,6 +680,16 @@ body {
 @media (max-width: 768px) {
   .about__text {
     margin-bottom: 30px;
+  }
+}
+
+.about__image {
+  display: flex;
+  align-items: center;
+  img {
+    max-width: 100%;
+    height: auto;
+    display: block;
   }
 }
 
@@ -746,11 +749,6 @@ body {
 @media (max-width: 990px) {
   .shop_block .carousel__item {
     margin: 30px auto;
-  }
-}
-@media (max-width: 45px) {
-  .shop_block .carousel__item {
-    margin: 10px auto;
   }
 }
 
@@ -1021,6 +1019,11 @@ body {
   }
 }
 
+.carousel__image img {
+  width: 100%;
+  height: auto;
+}
+
 .carousel__content {
   -webkit-box-flex: 70%;
       -ms-flex: 70%;
@@ -1212,6 +1215,11 @@ body {
   }
 }
 
+.contacts_link img {
+  width: 20px;
+  height: 20px;
+}
+
 @media (max-width: 980px) {
   .footer__sub_block {
     display: none;
@@ -1237,9 +1245,15 @@ body {
 .footer_link {
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
+  padding: 5px;
 }
+
+.contacts_link img {
+  width: 20px;
+  height: 20px;
+}
+
 .footer_link:hover {
-  padding: 5px 10px;
   background-color: rgba(252, 247, 239, 0.5);
   border-radius: 10px;
   color: #380822;
