--- a/source/css/style.css
+++ b/source/css/style.css
@@ -192,6 +192,7 @@ body {
 /* MOBILE MENU */
 .mobile__list {
   width: 100%;
+  height: 60vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -202,7 +203,7 @@ body {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  padding: 10px 8px 40px 10px;
+  padding: 20px 8px 40px 10px;
   background-color: rgba(236, 112, 173, 0.9);
   border-radius: 20px;
 }
@@ -1258,5 +1259,10 @@ body {
   border-radius: 10px;
   color: #380822;
   font-weight: 700;
+}
+
+.footer__contacts .footer_link {
+  padding: 5px;
+  font-size: 16px;
 }
 /*# sourceMappingURL=style.css.map */
