--- a/source/css/style.css
+++ b/source/css/style.css
@@ -882,7 +882,7 @@ body {
 }
 
 .old_price {
-  color: #94939B;
+  color: #232329;
   -webkit-text-decoration-line: line-through;
           text-decoration-line: line-through;
 }
