--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1082,7 +1082,7 @@ body {
 /* FOOTER */
 .footer {
   width: 100%;
-  background: url("../../images/footer/footer_back.png") center no-repeat;
+  background: center/cover no-repeat url("../../images/footer/footer_back.webp");
   color: #ffffff;
 }
 
